--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
 <header class="topbar">
   <div class="brand">
-    <img id="clubLogo" src="CLAUDIO LOGO.jpg" alt="Logo Petriolese" onerror="this.style.display='none'"/>
+    <img id="clubLogo" src="logo.png" alt="Logo Petriolese" onerror="this.style.display='none'"/>
     <div class="club">Petriolese Calcio</div>
   </div>
   <div>
